[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "Yannick Marcon", email = "yannick.marcon@epfl.ch" },
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.115.14",
    "uvicorn>=0.35.0",
    "pydantic-settings>=2.8.0",
    "redis>=6.4.0",
    "isochrones @ git+https://github.com/EPFL-ENAC/isochrones.git@0.3.0",
    "francetravail-pipeline @ git+https://github.com/EPFL-ENAC/LASUR-francetravail-pipeline.git@v0.2.0",
]

[project.optional-dependencies]
dev = [
    "dotenv>=0.9.9",
    "pytest>=8.4.1",
    "python-dotenv[cli]>=1.1.1",
]
test = [
    "pytest>=8.4.1",
]

[tool.codespell]
skip = 'uv.lock'

